...
                                        <connections>
                                            <outlet property="postTitleLabel" destination="Kxq-ah-67L" id="4Ag-7u-CxV"/>
                                        </connections>
                                    </tableViewCell>
                                </prototypes>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="string" keyPath="accessibilityLabel" value="PostsTableView"/>
                                </userDefinedRuntimeAttributes>
                                <connections>
                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="YoX-Eg-Zsj"/>
                                    <outlet property="delegate" destination="BYZ-38-t0r" id="qv9-gN-Gfe"/>
                                </connections>
                            </tableView>
...
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="top" secondItem="nYG-wV-Rbj" secondAttribute="top" id="YUL-v5-U7S"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="nYG-wV-Rbj" secondAttribute="trailing" id="h3u-ad-qD7"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="nYG-wV-Rbj" secondAttribute="bottom" id="t0p-tV-yGr"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                    </view>
                    <navigationItem key="navigationItem" title="Posts" id="g2B-nN-t3o">
                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="SYX-0K-pYr">
                            <connections>
                                <action selector="addPostAction:" destination="BYZ-38-t0r" id="zUC-7U-F4L"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
